--- a/pages/bio.html
+++ b/pages/bio.html
@@ -27,8 +27,8 @@
                 </nav>
             </div>
         </header>
-        <main>
-            <h2>Bio</h2>
+        <main class="mainbio">
+            <h2>Bioq</h2>
             <h3>La historia oficial contada una y otra vez dice que, La Vela Puerca nace como banda en la tarde del 24 de diciembre de 1995. Fue afuera del bar "El Tigre", al aire libre con amigos y el espíritu de verano. El bar proveyó la electricidad y los amigos el ambiente mientras que la banda ponía las ganas y la música. La grabación de aquel recital callejero quedó registrada en un cassette que presentaron en el Concurso Generación 96 organizado por el programa Control Remoto de Canal 10. "Común Cangrejo" y "De Tal Palo" sonaron por primera vez en la TV uruguaya y muchos tenían el primer contacto con una banda que mostraba un perfil fiestero, acelerado, combativo y colorido.</h3>
             <h2>Integrantes</h2>
             <h3>SEBASTIÁN TEYSERA, Enano: voz</h3>
