--- a/pages/bio.html
+++ b/pages/bio.html
@@ -8,6 +8,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;700&family=Ubuntu:ital@0;1&display=swap" rel="stylesheet">
+        <!--link a bootstrap-->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
         <!--link al css-->
         <link rel="stylesheet" href="../css/style.css">
         <script src="https://kit.fontawesome.com/70d907693e.js" crossorigin="anonymous"></script>
@@ -16,20 +18,65 @@
     <body class="body">
         <header>
             <div class="nav">
-                <nav>
-                    <ul>
-                        <li><a href="../index.html">Inicio</a></li>
-                        <li><a href="discografia.html">Discografia</a></li>
-                        <li><a href="galeria.html">Galeria</a></li>
-                        <li><a href="shows.html">Shows</a></li>
-                        <li><a href="bio.html">Bio</a></li>
-                    </ul>
+                <nav class="navbar navbar-dark bg-dark fixed-top navbar-expand-md">
+                <div class="container-fluid">
+                <a class="navbar-brand" href="../index.html"><img src="../assets/logo-white.png" width="40px"></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+                <div class="offcanvas-header">
+                <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Menu</h5>
+                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="discografia.html">Discografía</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="galeria.html">Galería</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="shows.html">Shows</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="bio.html">Bio</a>
+                    </li>
+                </ul>
+                </div>
+                </div>
+                </div>
                 </nav>
             </div>
         </header>
         <main class="mainbio">
-            <h2>Bioq</h2>
-            <h3>La historia oficial contada una y otra vez dice que, La Vela Puerca nace como banda en la tarde del 24 de diciembre de 1995. Fue afuera del bar "El Tigre", al aire libre con amigos y el espíritu de verano. El bar proveyó la electricidad y los amigos el ambiente mientras que la banda ponía las ganas y la música. La grabación de aquel recital callejero quedó registrada en un cassette que presentaron en el Concurso Generación 96 organizado por el programa Control Remoto de Canal 10. "Común Cangrejo" y "De Tal Palo" sonaron por primera vez en la TV uruguaya y muchos tenían el primer contacto con una banda que mostraba un perfil fiestero, acelerado, combativo y colorido.</h3>
+            <h2 class="h2bio">Bio</h2>
+            <h3>El 24 de diciembre de 1995 fue uno de esos días especiales; improvisaron una fiesta callejera en la que no faltaron las banderas, el teatro, los malabaristas ni los tambores. La banda la armó Seba, "el enano", con Nico y Santi. Después y para ese evento se unieron Rafa, Seba "Cebolla", y Coli para hacer algunas canciones propias más algunos covers y otras versiones. Seba se fue a España unos meses y volvió con canciones nuevas en su guitarra, muchas ganas y la cabeza llena de ideas. Un concurso para bandas nuevas (Generación ’96) dio a conocer los nombres de las 20 finalistas. Muchos de la banda no sabían que Seba había presentado un casete en ese concurso.
+            La Vela Puerca estaba en la pantalla y un mes después de tocar en el concurso, una llamada telefónica les avisó que habían ganado una guitarra, un amplificador y 80 horas de grabación para el primer disco. Claudio Taddei, reconocido músico uruguayo, se metió en el estudio con ellos durante noviembre y diciembre del 97’ para grabar “Deskarado”. El disco tiene trece canciones simples y contundentes, llenas de mensajes y melodías al ritmo de ska, reggae y rock. La Vela Puerca irrumpió en la escena montevideana pisando fuerte, con un público fiel que hizo llegar a “Deskarado” a disco de Oro, y un año después al Platino. En esos meses llegó “Deskarado” a oídos del productor argentino Gustavo Santaolalla, radicado en Los Ángeles.
+            Después del verano de 1999, Seba y Nico viajaron a Los Ángeles para re-mezclar el álbum bajo la dirección de Santaolalla. A fines de ese año, mejorada su calidad sonora, se publicó en México, Estados Unidos, Argentina y Uruguay con el nombre "La Vela Puerca". El 2 de Octubre de 1999 La Vela Puerca convocó a 5000 personas en el Teatro de Verano, por primera vez tocando solos en ese lugar.
+            El 17 de octubre de 2020, La Vela Puerca se presenta en vivo en el streaming "Donde estés", y da a conocer dos viejas canciones que tenía guardadas y no habían sido grabadas oficialmente aún.
+            En el año 2000, tocan con Los Fabulosos Cadillacs en Abril y con Bersuit Vergarabat en Octubre. En diciembre graban en los Estudios Panda de Buenos Aires las bases de "De Bichos y Flores". En abril de 2001 fueron a Los Ángeles nuevamente para terminar de grabar y mezclar el disco, con Ricardo Troilo como ingeniero del proyecto. Este nuevo disco muestra la evolución de la banda; canciones cargadas de adrenalina y un sonido más trabajado; en poco tiempo la gente lo convierte en disco de Platino. En este trabajo se encuentra "El viejo".
+            En 2004 sale a la venta el tercer álbum, bajo el nombre de “A contraluz” y de esta manera continúan girando. Los cortes más conocidos son "De atar" y "Va a escampar".
+            2007 llega con "El impulso", la cuarta placa de estudio. 
+            En 2009 salen dos discos de grandes éxitos: "Comprimida 1995-2009" y "Normalmente anormal - Cd+ Dvd", una placa doble.
+            En 2011, La Vela Puerca edita "Piel y Hueso". El quinto álbum de estudio es doble y contiene 18 canciones en total. Posee una primera parte rockera y un segundo disco acústico.
+            El 7 de junio de 2013 estrenas "Los reyes de los buzones", el primero de 3 temas que publican en su web oficial, como adelanto de un nuevo disco, agrupados en el EP "Pasaje salvo". Una semana después publican "La hiedra", segunda entrega; por último, el viernes 21 cuelgan "De amar". 
+            En noviembre estrenan el video de "Sólo un Paredón", corte del disco "Piel y Hueso", el que sale a la venta durante el mismo mes en formato Vinilo.
+            El 25 de julio de 2014 sale a la venta "Uno Para Todos", el doble CD + DVD grabado en agosto de 2013 durante un show en el Luna Park. 
+            El 16 de mayo de 2015 presentan "Érase.." en vivo en el Velódromo Municipal de Montevideo. Recibieron como invitados a Gabriel Peluffo de Buitres, Ernesto Tabárez, de ET y Los Problems, y Juan Casanova de Traidores. En esta oportunidad, la banda estrenó el video de "Canción Para Uno".
+            El 31 de marzo de 2016 estrenan "Mi Tensión", el tercer video de su última producción. Invitados por la murga uruguaya Cayó La Cabra, el 30 de noviembre presentan el tema "Al Sur del Atardecer".
+            El 20 de octubre de 2017 editan un doble CD+DVD+libro titulado "20 Años: Festejar Para Sobrevivir", registrado el 19 de noviembre de 2016 en el Velódromo Municipal de Montevideo.
+            El 18 de mayo de 2018 editan "Destilar", nuevo álbum compuesto por 13 canciones inéditas. El primer sencillo se titula "La Nube". Participa Raly Barrionuevo en "La Luna de Neuquén".
+            El 21 de febrero de 2020, lanzan una versión del tema de Las Pelotas, "Menos Mal". El 14 de junio la banda presenta el video de “Frágil”, grabado en vivo en el festejo de los 20 años. 
+            El 17 de octubre de 2020, la banda realiza el concierto por streaming "Donde estés", y presenta dos viejas canciones que tenían guardadas y nunca habían sido oficialmente grabadas hasta ahora. 
+            En el mes de diciembre estrenan el single "Mutantes" y el 24 de el mismo mes La Vela Puerca celebra 25 años de trayectoria artística.
+            En febrero de 2021 la banda estrena el single "Mira cómo es".
+            En abril de 2021 estrenan el single "La madriguera (Pilsen Rock 2020, por la música". Esta canción fue interpretada de manera inédita en el Streaming "Pilsen Rock 2020, Por la Música", festival virtual que se emitió el 18 de julio de 2020 exclusivamente en Uruguay, y en abril de 2021 se publicó en todas las plataformas digitales. 
+            El 10 de marzo de 2022 lanzan un single adelanto de su nuevo álbum llamado "La pastilla" con la colaboración de Arquero.
+            El 1 de abril lanzan el single "Jugando con fuego".
+            El 6 de mayo lanzan el álbum de estudio "Discopático". 
+            El 12 de mayo de 2023 lanza el single "Dice - En vivo" junto a Milongas Extremas.</h3>
             <h2>Integrantes</h2>
             <h3>SEBASTIÁN TEYSERA, Enano: voz</h3>
             <h3>SEBASTIÁN CEBREIRO, Cebolla: voz</h3>
@@ -40,7 +87,6 @@
             <h3>NICOLÁS LIEUTIER, Nico: bajo</h3>
             <h3>JOSÉ PP CANEDO, PP: batería</h3>
             <h3>DIEGO MÉNDEZ, Diego: teclados</h3>
-
         </main>
         <footer class="footer">
             <div class="redes">
@@ -53,5 +99,7 @@
             </div>
         <small>&copy; 2023 <b>Marcos Pérez</b> - Todos los Derechos Reservados.</small>
         </footer>
+        <!--script bootstrap-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     </body>
 </html>
