--- a/pages/bio.html
+++ b/pages/bio.html
@@ -15,6 +15,8 @@
         rel="stylesheet">
     <!--link aos style-->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!--link favicon-->
+    <link rel="shortcut icon" href="../assets/logo-white.png">
     <!--link al css-->
     <link rel="stylesheet" href="../css/style.css">
     <script src="https://kit.fontawesome.com/70d907693e.js" crossorigin="anonymous"></script>
