--- a/pages/bio.html
+++ b/pages/bio.html
@@ -5,6 +5,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--seo meta tags-->
+    <meta name="description"
+        content="Sitio dedicado en exclusiva a la banda de musica uruguaya La Vela Puerca. En esta página está plasmada parte de su historia y artistas conn los que han colaborado. Además encontrarás información acerca de su dicografía, próximos shows y podrás escuchar un demo de su disco Discopatico.">
+    <meta name="keywords" content="musica, rock, banda, velapuerca, discografia, shows, uruguay, grupo">
+    <!-- Primary Meta Tags -->
+    <title>Bio</title>
+    <meta name="title" content="Bio">
+    <meta name="description"
+        content="Sitio dedicado en exclusiva a la banda de musica uruguaya La Vela Puerca. En esta página está plasmada parte de su historia y artistas conn los que han colaborado. Además encontrarás información acerca de su dicografía, próximos shows y podrás escuchar un demo de su disco Discopatico.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.facebook.com/LaVelaPuerca.OFICIAL/">
+    <meta property="og:title" content="Bio">
+    <meta property="og:description"
+        content="Sitio dedicado en exclusiva a la banda de musica uruguaya La Vela Puerca. En esta página está plasmada parte de su historia y artistas conn los que han colaborado. Además encontrarás información acerca de su dicografía, próximos shows y podrás escuchar un demo de su disco Discopatico.">
+    <meta property="og:image" content="assets/imagencompleta.jfif" alt="Imagen de la banda.">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://twitter.com/LaVela_Oficial">
+    <meta property="twitter:title" content="Bio">
+    <meta property="twitter:description"
+        content="Sitio dedicado en exclusiva a la banda de musica uruguaya La Vela Puerca. En esta página está plasmada parte de su historia y artistas conn los que han colaborado. Además encontrarás información acerca de su dicografía, próximos shows y podrás escuchar un demo de su disco Discopatico.">
+    <meta property="twitter:image" content="assets/imagencompleta.jfif" alt="Imagen de la banda">
     <!--link a bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -43,7 +68,7 @@
                         <div class="offcanvas-body">
                             <ul class="navbar-nav d-flex justify-content-center flex-grow-1 pe-3">
                                 <a class="navbar-brand" href="../index.html"><img src="../assets/logo-white.png"
-                                        width="40px"></a>
+                                        width="40px" alt="Logo de la banda."></a>
                                 <li class="nav-item">
                                     <a class="nav-link active" aria-current="page"
                                         href="discografia.html">Discografía</a>
