--- a/pages/bio.html
+++ b/pages/bio.html
@@ -38,6 +38,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;700&family=Ubuntu:ital@0;1&display=swap"
         rel="stylesheet">
+    <!--link animatecss-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <!--link aos style-->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!--link favicon-->
@@ -93,7 +95,7 @@
     <main class="mainbio">
         <h2 class="h2bio">Bio</h2>
         <div class="caja">
-            <h3 data-aos="flip-left" data-aos-offset="300" class="h3bio">La historia oficial contada una y otra vez dice
+            <h3 data-aos="flip-left" data-aos-offset="300" class="h3bioprincipal">La historia oficial contada una y otra vez dice
                 que, La Vela Puerca nace como banda en la tarde del 24 de diciembre de 1995. Fue afuera del bar "El
                 Tigre", al aire libre con amigos y el espíritu de verano. El bar proveyó la electricidad y los amigos el
                 ambiente mientras que la banda ponía las ganas y la música. La grabación de aquel recital callejero
@@ -209,8 +211,10 @@
                 Son doce nuevas canciones envueltas en un sonido cristalino que reflejan la amplitud musical que la
                 banda fue cosechando a lo largo de los años.</h3>
         </div>
-        <h2>Integrantes</h2>
-        <div class="integrantes">
+        <div class="h2integrantes">
+            <h2 class="animate__animated animate__zoomInDown animate__infinite animate__slower 3s">Integrantes</h2>
+        </div>
+        <div class="Integrantes">
             <h3 data-aos="fade-up">SEBASTIÁN TEYSERA, Enano: voz</h3>
             <h3 data-aos="fade-up">SEBASTIÁN CEBREIRO, Cebolla: voz</h3>
             <h3 data-aos="fade-up">CARLOS QUIJANO, Coli: saxo</h3>
